--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a class="header__link" href="#">Узнать &#8594</a>
+        <a class="header__link" href="#">Узнать &#8594;</a>
       </p>
       <div class="header__square-pic"></div>
       <div>
-        <img class="header__main-illustration" src="./images/header-image.png" alt="Изображение в шапке">
+        <img class="header__main-illustration" src="./images/header-image.png" alt="Картина. Опять двойка">
       </div>
     </header>
     <main class="content">
@@ -81,15 +81,13 @@
       <section class="feynman">
         <div>
           <h2 class="feynman__title">Метод Фейнмана</h2>
-        </div>
-        <div>
           <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
         </div>
         <div>
-          <a href="#" class="feynman__link">Подробнее &#8594</a>
+          <a href="#" class="feynman__link">Подробнее &#8594;</a>
         </div>
         <div>
-          <img src="./images/feynman.png" class="fyenman__link" alt="Фото Фейнмана">
+          <img src="./images/feynman.png" class="feynman__photo" alt="Фото Фейнмана">
         </div>
       </section>
 
@@ -150,17 +148,17 @@
             <img src="./images/logo_place_footer.svg" class="logo logo_place_footer" alt="Логотип Яндекс.Практикум">
           </div>
           <div>
-            <p class="footer__author">&#169 2019. Виктор Абанькин</p>
+            <p class="footer__author">&#169; 2019. Виктор Абанькин</p>
           </div>
         </div>
         <div class="footer__column">
           <div>
-            <p class="footer__column-heading footer__column_content_info" href="#">О Практикуме</p>
+            <p class="footer__column-heading">О Практикуме</p>
           </div>
-          <div class="footer__column-links">
-            <p><a class="footer__column_content_info" href="#">Главная</a></p>
-            <p><a class="footer__column_content_info" href="#">Концепция</a></p>
-            <p><a class="footer__column_content_info" href="#">Наставники</a></p>
+          <div class="footer__column_content_info">
+            <p class="footer__column-links"><a class="footer__column_content_info" href="#">Главная</a></p>
+            <p class="footer__column-links"><a class="footer__column_content_info" href="#">Концепция</a></p>
+            <p class="footer__column-links"><a class="footer__column_content_info" href="#">Наставники</a></p>
           </div>
         </div>
         <div class="footer__column">
@@ -169,17 +167,17 @@
           </div>
           <div>
             <a href="#" class="footer__column-links footer__column_content_social">
-              <img src="./images/facebook_color_white.svg" class="footer__social-icon">Facebook
+              <img src="./images/facebook_color_white.svg" class="footer__social-icon" alt="Иконка Facebook">Facebook
             </a>
           </div>
           <div>
             <a href="#" class="footer__column-links footer__column_content_social">
-              <img src="./images/vk_color_white.svg" class="footer__social-icon">ВКонтакте
+              <img src="./images/vk_color_white.svg" class="footer__social-icon" alt="Иконка ВКонтакте">ВКонтакте
             </a>
           </div>
           <div>
             <a href="#" class="footer__column-links footer__column_content_social">
-              <img src="./images//instagram_color_white.svg" class="footer__social-icon">Instagram
+              <img src="./images//instagram_color_white.svg" class="footer__social-icon" alt="Иконка Instagram">Instagram
             </a>
           </div>
         </div>
