--- a/index.html
+++ b/index.html
@@ -91,49 +91,49 @@
         </div>
       </section>
 
-      <section class="kaufman table_theme_dark">
-        <h2 class="section-title ">Принципы обучения</h2>
-        <h3 class="section-subtitle ">от Джоша Кауфмана</h3>
-        <div class="table">
+      <section class="kaufman">
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <div class="table table_theme_dark">
           <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading ">1</p>
-            <p class="table__text ">Выберите привлекательный проект.</p>
+            <p class="table__heading table__heading_theme_dark">1</p>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading ">2</p>
-            <p class="table__text ">Сосредоточьтесь на каком-то одном навыке.</p>
+            <p class="table__heading table__heading_theme_dark">2</p>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading">3</p>
-            <p class="table__text">Определите целевой уровень мастерства.</p>
+            <p class="table__heading table__heading_theme_dark">3</p>
+            <p class="table__text table__text_theme_dar">Определите целевой уровень мастерства.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading">4</p>
-            <p class="table__text">Разбейте навык на элементы.</p>
+            <p class="table__heading table__heading_theme_dark">4</p>
+            <p class="table__text table__text_theme_dar">Разбейте навык на элементы.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading">5</p>
-            <p class="table__text">Приготовьте всё необходимое для занятий.</p>
+            <p class="table__heading table__heading_theme_dark">5</p>
+            <p class="table__text table__text_theme_dar">Приготовьте всё необходимое для занятий.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading">6</p>
-            <p class="table__text">Устраните препятствия для занятий.</p>
+            <p class="table__heading table__heading_theme_dark">6</p>
+            <p class="table__text table__text_theme_dar">Устраните препятствия для занятий.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading">7</p>
-            <p class="table__text">Выделите специальное время для занятий.</p>
+            <p class="table__heading table__heading_theme_dark">7</p>
+            <p class="table__text table__text_theme_dar">Выделите специальное время для занятий.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading">8</p>
-            <p class="table__text">Создайте быстрые петли обратной связи.</p>
+            <p class="table__heading table__heading_theme_dark">8</p>
+            <p class="table__text table__text_theme_dar">Создайте быстрые петли обратной связи.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading">9</p>
-            <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            <p class="table__heading table__heading_theme_dark">9</p>
+            <p class="table__text table__text_theme_dar">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <p class="table__heading">10</p>
-            <p class="table__text">Уделяйте внимание количеству и скорости.</p>
+            <p class="table__heading table__heading_theme_dark">10</p>
+            <p class="table__text table__text_theme_dar">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
         <div>
@@ -177,7 +177,7 @@
           </div>
           <div>
             <a href="#" class="footer__column-links footer__column_content_social">
-              <img src="./images//instagram_color_white.svg" class="footer__social-icon" alt="Иконка Instagram">Instagram
+              <img src="./images/instagram_color_white.svg" class="footer__social-icon" alt="Иконка Instagram">Instagram
             </a>
           </div>
         </div>
