padding block khan

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Книга Салмана Хана">
+            <div class="khan__book-pic"><img src="./images/khan-book.jpg" alt="Книга Салмана Хана"></div>
             <a class="khan__buy-link" href="#">Купить книгу &#8594;</a>
           </div>
         </div>
