--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
         <div class="khan__container">
           <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир — школа</h2>
-          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <div class="khan__book-pic"><img src="./images/khan-book.jpg" alt="Книга Салмана Хана"></div>
+            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Книга Салмана Хана">
             <a class="khan__buy-link" href="#">Купить книгу &#8594;</a>
           </div>
         </div>
@@ -194,12 +194,12 @@
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-        <div class="resources__logo-zone">
-          <a href="https://arzamas.academy/"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Arzamas_logo"></a>
-          <a href="https://nplus1.ru/"><img class="resources__logo" src="./images/logo//resources-n1.svg" alt="N_plus_1_logo"></a>
-          <a href="https://strelka.com/"><img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Strelka_logo"></a>
-          <a href="https://polka.academy/"><img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Polka_logo"></a>
-        </div>
+        <ul class="resources__logo-zone">
+          <li class="resources__logo"><a href="https://arzamas.academy/"><img src="./images/logo/resources-arzamas.svg" alt="Arzamas_logo"></a></li>
+          <li class="resources__logo"><a href="https://nplus1.ru/"><img src="./images/logo//resources-n1.svg" alt="N_plus_1_logo"></a></li>
+          <li class="resources__logo"><a href="https://strelka.com/"><img src="./images/logo/resources-strelka.svg" alt="Strelka_logo"></a></li>
+          <li class="resources__logo"><a href="https://polka.academy/"><img src="./images/logo/resources-polka.svg" alt="Polka_logo"></a></li>
+        </ul>
       </section>
 
     </main>
