change_resources_logo

--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <ul class="resources__logo-zone">
-          <li class="resources__logo"><a href="https://arzamas.academy/"><img src="./images/logo/resources-arzamas.svg" alt="Arzamas_logo"></a></li>
-          <li class="resources__logo"><a href="https://nplus1.ru/"><img src="./images/logo//resources-n1.svg" alt="N_plus_1_logo"></a></li>
-          <li class="resources__logo"><a href="https://strelka.com/"><img src="./images/logo/resources-strelka.svg" alt="Strelka_logo"></a></li>
-          <li class="resources__logo"><a href="https://polka.academy/"><img src="./images/logo/resources-polka.svg" alt="Polka_logo"></a></li>
+          <li><a href="https://arzamas.academy/"><img src="./images/logo/resources-arzamas.svg" class="resources__logo" alt="Arzamas_logo"></a></li>
+          <li><a href="https://nplus1.ru/"><img src="./images/logo//resources-n1.svg" class="resources__logo" alt="N_plus_1_logo"></a></li>
+          <li><a href="https://strelka.com/"><img src="./images/logo/resources-strelka.svg" class="resources__logo" alt="Strelka_logo"></a></li>
+          <li><a href="https://polka.academy/"><img src="./images/logo/resources-polka.svg" class="resources__logo" alt="Polka_logo"></a></li>
         </ul>
       </section>
 
