--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a class="header__link" href="#">Узнать &#8594;</a>
+        <a class="header__link" href="#">Узнать&nbsp;&#8594;</a>
       </p>
       <div class="header__square-pic rotation"></div>
-        <img class="header__main-illustration" src="./images/header-image.png" alt="Картина. Опять двойка">
+      <img class="header__main-illustration" src="./images/header-image.png" alt="Картина. Опять двойка">
     </header>
 
     <main class="content">
